อัพเดทระบบให้แสดงสถานะ Pending บน dashboard ของอาจารย์และเจ้าหน้าที่แบบ real-time

--- a/public/web_pro/lect/lec-dash.html
+++ b/public/web_pro/lect/lec-dash.html
@@ -529,6 +529,6 @@ document.addEventListener('DOMContentLoaded', function() {
         window.location.href = '/settings/lec';
     }
 </script>
-</body>
 
+    <!-- ====================  fetch available Asset ==================== -->
 </html>
