--- a/public/web_pro/staff/stf-dash.html
+++ b/public/web_pro/staff/stf-dash.html
@@ -480,6 +480,63 @@
             }
         }
 
+        // ====================  fetch available Asset ====================
+        function fetchAvailableAssets() {
+            fetch('/get-available-assets')
+                .then(response => response.json())
+                .then(data => {
+                    const assetContainer = document.getElementById('assetContainer');
+                    assetContainer.innerHTML = '';
+
+                    data.forEach(asset => {
+                        const assetCard = document.createElement('div');
+                        assetCard.className = 'col-md-4 mb-4';
+                        assetCard.innerHTML = `
+                            <div class="card h-100">
+                                <img src="${asset.Image}" class="card-img-top" alt="${asset.AssetName}" style="height: 200px; object-fit: cover;">
+                                <div class="card-body">
+                                    <h5 class="card-title">${asset.AssetName}</h5>
+                                    <p class="card-text">${asset.Description}</p>
+                                    <p class="card-text"><small class="text-muted">Asset ID: ${asset.AssetID}</small></p>
+                                    <p class="card-text">
+                                        <span class="badge ${asset.Status === 'Available' ? 'bg-success' : 
+                                            asset.Status === 'Pending' ? 'bg-warning' : 'bg-danger'}">
+                                            ${asset.Status}
+                                        </span>
+                                    </p>
+                                </div>
+                            </div>
+                        `;
+                        assetContainer.appendChild(assetCard);
+                    });
+                })
+                .catch(error => {
+                    console.error('Error fetching available assets:', error);
+                });
+        }
+
+        // Listen for status updates
+        function listenForStatusUpdates() {
+            // Check for status updates every 5 seconds
+            setInterval(() => {
+                fetch('/get-dashboard-status')
+                    .then(response => response.json())
+                    .then(data => {
+                        if (data.status === 'Pending') {
+                            fetchAvailableAssets(); // Refresh the assets list
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Error checking status updates:', error);
+                    });
+            }, 5000);
+        }
+
+        // Initialize the page
+        document.addEventListener('DOMContentLoaded', function () {
+            fetchAvailableAssets();
+            listenForStatusUpdates();
+        });
 
     </script>
     <script src="/public/js/bootstrap.min.js"></script>
