--- a/public/web_pro/student/std-sta-pd.html
+++ b/public/web_pro/student/std-sta-pd.html
@@ -128,43 +128,22 @@
                     fetch(`/cancel-asset-request/${reqId}`, {
                         method: 'DELETE'
                     })
-                        .then(response => {
-                            if (!response.ok) throw new Error('Network response was not ok');
-                            return response.json();
-                        })
-                        .then(data => {
-                            if (data.success) {
-                                // Notify dashboard about the status change
-                                fetch('/update-dashboard-status', {
-                                    method: 'POST',
-                                    headers: {
-                                        'Content-Type': 'application/json'
-                                    },
-                                    body: JSON.stringify({
-                                        status: 'Pending',
-                                        action: 'cancel'
-                                    })
-                                })
-                                .then(response => response.json())
-                                .then(dashboardData => {
-                                    if (dashboardData.success) {
-                                        Swal.fire('Cancelled!', 'The asset request has been cancelled.', 'success');
-                                        fetchPendingAssets(); // Refresh the pending assets
-                                    } else {
-                                        throw new Error('Failed to update dashboard');
-                                    }
-                                })
-                                .catch(error => {
-                                    console.error('Dashboard update error:', error);
-                                    Swal.fire('Warning', 'Request cancelled but dashboard update failed', 'warning');
-                                });
-                            } else {
-                                throw new Error('Cancellation failed');
-                            }
-                        })
-                        .catch(error => {
-                            Swal.fire('Error', 'Error cancelling the request: ' + error, 'error');
-                        });
+                    .then(response => {
+                        if (!response.ok) throw new Error('Network response was not ok');
+                        return response.json();
+                    })
+                    .then(data => {
+                        if (data.success) {
+                            Swal.fire('Cancelled!', 'The asset request has been cancelled.', 'success');
+                            fetchPendingAssets(); // Refresh the pending assets
+                        } else {
+                            throw new Error('Cancellation failed');
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Error:', error);
+                        Swal.fire('Error', 'Error cancelling the request: ' + error.message, 'error');
+                    });
                 }
             });
         }
@@ -183,7 +162,7 @@
                 <b>Asset Detail  :</b> ${item.Assetdetail || 'N/A'} <br>
                 <b>Asset Location:</b> ${item.Assetlocation || 'N/A'} <br>
                 <b>Activity:</b> ${item.Activity} <br>
-                <b>UsageType:</b> ${item.UsageType || 'N/A'} <br>
+                <b>UsageType:</b> ${(item.UsageType || item.usagetype || 'N/A')} <br>
                 <b>Borrow Date   :</b> ${item.Borrowdate || 'N/A'} <br>
                 <b>Return Date   :</b> ${item.ReturnDate || 'N/A'} <br>
             </p>
