--- a/public/web_pro/student/std-sta-rj.html
+++ b/public/web_pro/student/std-sta-rj.html
@@ -116,6 +116,11 @@
 
     <script>
         // ==================== Creeate Card ====================
+        function formatDate(dateString) {
+            if (!dateString) return 'N/A';
+            return dateString.split('T')[0];
+        }
+
         function createPendingCard(item) {
             const card = document.createElement('div');
             card.className = "card card-horizontal shadow-sm";
@@ -129,8 +134,8 @@
                 <b>Asset Location:</b> ${item.Assetlocation || 'N/A'} <br>
                 <b>Activity:</b> ${item.Activity || 'N/A'} <br>
                 <b>UsageType:</b> ${item.UsageType || 'N/A'} <br>
-                <b>Borrow Date   :</b> ${item.Borrowdate || 'N/A'} <br>
-                <b>Return Date   :</b> ${item.ReturnDate || 'N/A'} <br>
+                <b>Borrow Date   :</b> ${formatDate(item.Borrowdate)} <br>
+                <b>Return Date   :</b> ${formatDate(item.ReturnDate)} <br>
                 <b>Reject Reason:</b> 
                 <span style="color: red;">${item.Comment || 'N/A'}</span> <br>
             </p>
