--- a/public/web_pro/student/std-sta-rt.html
+++ b/public/web_pro/student/std-sta-rt.html
@@ -115,6 +115,11 @@
 
     <script>
         // ==================== Create Card ====================
+        function formatDate(dateString) {
+            if (!dateString) return 'N/A';
+            return dateString.split('T')[0];
+        }
+
         function createPendingCard(item) {
             const card = document.createElement('div');
             card.className = "card card-horizontal shadow-sm";
@@ -131,8 +136,8 @@
                 <b>Asset Location:</b> ${item.Assetlocation || 'N/A'} <br>
                 <b>Activity:</b> ${item.Activity} <br>
                 <b>UsageType:</b> ${item.UsageType || 'N/A'} <br>
-                <b>Borrow Date   :</b> ${item.Borrowdate || 'N/A'} <br>
-                <b>Return Date   :</b> ${item.ReturnDate || 'N/A'} <br>
+                <b>Borrow Date   :</b> ${formatDate(item.Borrowdate)} <br>
+                <b>Return Date   :</b> ${formatDate(item.ReturnDate)} <br>
             </p>
             <div class="d-flex justify-content-end gap-2">
                
