แยก front back แล้ว

--- a/public/web_pro/lect/lec-borr-req.html
+++ b/public/web_pro/lect/lec-borr-req.html
@@ -166,7 +166,7 @@
 
         function formatDate(dateString) {
             if (!dateString) return 'N/A';
-            return dateString;
+            return dateString.split('T')[0];
         }
 
         async function approveRequest(reqId) {
