--- a/public/web_pro/student/std-setting.html
+++ b/public/web_pro/student/std-setting.html
@@ -257,6 +257,12 @@
 
     </script>
 
+    <script>
+        function formatDate(dateString) {
+            if (!dateString) return 'N/A';
+            return dateString.split('T')[0];
+        }
+    </script>
 
 </body>
 
