--- a/public/web_pro/student/std-dash.html
+++ b/public/web_pro/student/std-dash.html
@@ -463,7 +463,7 @@
                                     const row = document.createElement('tr');
                                     row.innerHTML = `
                                         <td>${item.Assetname}</td>
-                                        <td>${item.ReturnDate}</td>
+                                        <td>${formatDate(item.ReturnDate)}</td>
                                         <td>${item.Assetlocation}</td>
                                     `;
                                     tableBody.appendChild(row);
@@ -497,6 +497,13 @@
         <script>
             function redirectToStudentSet() {
                 window.location.href = '/student/set';
+            }
+        </script>
+
+        <script>
+            function formatDate(dateString) {
+                if (!dateString) return 'N/A';
+                return dateString.split('T')[0];
             }
         </script>
 </body>
